--- a/bbsittingsharing/templates/bbsittingsharing/bbsitting_search.html
+++ b/bbsittingsharing/templates/bbsittingsharing/bbsitting_search.html
@@ -3,6 +3,10 @@
 {% load i18n %}
 
 {% block content %}
+<div id="pagetitle">
+    {% trans "Calendar around the" %} {{selected_date|date:"l j F Y"}}
+</div>
+
 <div class="panel">
     <table class="date-search-results">
     {%for bbsitting in bbsitting_list %}
@@ -22,10 +26,10 @@
             </td>
 
             <td>
-                {% if bbsitting.booked.count < bbsitting.children_capacity and bbsitting.author != user %}
-                <a class="btn bookbtn" href="{% url 'book' bbsitting.pk %}" title="{{bbsitting.booked.count}} {% trans "spots booked out of" %} {{bbsitting.children_capacity}}">{% trans "book" %}</a>
-                {% else %}
+                {% if bbsitting.booked.count or bbsitting.author == user %}
                 <span class="btn bookbtn-full" title="{{bbsitting.booked.count}} {% trans "spots booked out of" %} {{bbsitting.children_capacity}}">{% trans "not available" %}</span>
+                {% else %}
+                <a class="btn bookbtn" href="{% url 'book' bbsitting.pk %}" title="{{bbsitting.booked.count}} {% trans "spots booked out of" %} {{bbsitting.children_capacity}}">{% trans "book" %}</a>
                 {% endif %}
             </td>
         </tr>
