--- a/bbsittingsharing/templates/bbsittingsharing/bbsitting_form.html
+++ b/bbsittingsharing/templates/bbsittingsharing/bbsitting_form.html
@@ -18,6 +18,6 @@
 <form method="post">
     {% csrf_token %}
     {{form|bootstrap}}
-    <input type="submit" class="btn btn-danger">
+    <input type="submit" class="btn panelbtn">
 </form>
 {% endblock %}
