--- a/bbsittingsharing/templates/registration/login.html
+++ b/bbsittingsharing/templates/registration/login.html
@@ -12,7 +12,7 @@
 {% csrf_token %}
 {{form|bootstrap}}
 
-<input class="btn btn-danger pull-right" type="submit" value="{% trans 'login' %}" />
+<input class="btn panelbtn pull-right" type="submit" value="{% trans 'login' %}" />
 <input type="hidden" name="next" value="{{ next }}" />
 </form>
 {% endblock %}
