--- a/bbsittingsharing/templates/registration/registration_form.html
+++ b/bbsittingsharing/templates/registration/registration_form.html
@@ -7,6 +7,6 @@
 <form method="post">
     {% csrf_token %}
     {{form|bootstrap}}
-    <input type="submit" class="btn btn-danger pull-right" />
+    <input type="submit" class="btn panelbtn pull-right" />
 </form>
 {% endblock %}
