--- a/bbsittingsharing/templates/bbsittingsharing/bbsitting_form.html
+++ b/bbsittingsharing/templates/bbsittingsharing/bbsitting_form.html
@@ -6,8 +6,8 @@
 
 <script>
     window.onload = function() {
-        $('#id_date').datetimepicker({format: "DD/MM/YYYY"});
-        $('#id_start').datetimepicker({format: 'HH:mm'});
+        $('#id_date').datetimepicker({format: "DD/MM/YYYY", locale: 'fr'});
+        $('#id_start').datetimepicker({format: 'HH:mm', locale: 'fr'});
     };
 </script>
 {% endblock %}
