--- a/bbsittingsharing/templates/bbsittingsharing/parent_form.html
+++ b/bbsittingsharing/templates/bbsittingsharing/parent_form.html
@@ -5,7 +5,7 @@
 <div id="pagetitle">
     {% trans "Edit my profile" %}
 </div>
-<div class="profile-edit-help">
+<div class="page-help">
     {% trans "You can add details in your profile to better describe your needs of bbsitting sharing. No data is mandatory." %}
 </div>
 <form method="post" enctype="multipart/form-data">
