--- a/bbsittingsharing/templates/bbsittingsharing/bbsitting_list.html
+++ b/bbsittingsharing/templates/bbsittingsharing/bbsitting_list.html
@@ -14,7 +14,7 @@
     {% trans "Calendar" %}
 </div>
 <div class="text-center"><a class="btn panelbtn" href="{% url 'new' %}">{% trans "Propose a date" %}</a></div>
-{% trans "Or click directly on a date to book a bbsitting" %}
+<div class="page-help">{% trans "Or click directly on a date to book a bbsitting" %}</div>
 <div class="panel calendarpanel">
     <div class="btn calendar-arrow left glyphicon glyphicon-menu-left" onclick="stepCalendar(-1)"></div>
     <div id="calendar-left" class="col-sm-6"></div>
