--- a/bbsittingsharing/templates/bbsittingsharing/friends.html
+++ b/bbsittingsharing/templates/bbsittingsharing/friends.html
@@ -1,9 +1,10 @@
 {% load i18n %}
 {% for user in users %}
-<div>
+<div class="userlist">
     <a href="{% url 'profile' user.username %}">
         <img class="userthumb" src="{{user.picture.url}}" alt="{% blocktrans %}{{user}}'s picture{% endblocktrans %}" />
         {{user.get_full_name}}
     </a>
+    <div class="clearfix"></div>
 </div>
 {% endfor %}
