--- a/bbsittingsharing/templates/contact.html
+++ b/bbsittingsharing/templates/contact.html
@@ -5,13 +5,11 @@
 {% load bootstrap %}
 {% block content %}
 <div id="pagetitle">
-    <h4>{% trans "Terms of use" %}</h4>
+    <h4>{% trans "Contact" %}</h4>
 </div>
-<div class="panel terms">
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{form|bootstrap}}
     <input class="btn panelbtn" type="submit">
 </form>
-</div>
 {% endblock %}
