--- a/bbsittingsharing/templates/legal.html
+++ b/bbsittingsharing/templates/legal.html
@@ -4,9 +4,9 @@
 
 {% block content %}
 <div id="pagetitle">
-    <h4>{% trans "Terms of use" %}</h4>
+    <h4>{% trans "Legal statement" %}</h4>
 </div>
-<div id="panel terms">
-    Informations légales
+<div class="panel terms">
+    {% trans "Legal statement" %}
 </div>
 {% endblock %}
