--- a/bbsittingsharing/templates/registration/registration_complete.html
+++ b/bbsittingsharing/templates/registration/registration_complete.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 {% load i18n %}
 {% block content %}
-<div id="pagetitle">
-    <div>{% trans "Thanks for registering." %}</div>
+<div class="panel panel-confirm">
+    <h3>{% trans "Thanks for registering." %}</h3>
     <div>{% trans "As the network is based on trust, we are going to check your reference, and we'll send you an e-mail." %}</div>
     <div>{% trans "Thank you for your interest in BBSitting Sharing by Echos Kids." %}</div>
     <div>{% trans "See you soon !" %}</div>
+    <div class="team-sign">{% trans "The Bbsitting Sharing team" %}</div>
 </div>
+<a class="btn panelbtn pull-right" href="{% url 'index' %}">{% trans "Home" %}</a>
 {% endblock %}
