--- a/bbsittingsharing/templates/bbsittingsharing/bbsitting_search.html
+++ b/bbsittingsharing/templates/bbsittingsharing/bbsitting_search.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div id="pagetitle">
-    {% trans "Calendar around the" %} {{selected_date|date:"l j F Y"}}
+    {% trans "Calendar +/- 3 days around the" %} {{selected_date|date:"l j F Y"}}
 </div>
 
 <div class="panel">
