--- a/bbsittingsharing/templates/bbsittingsharing/bbsitting_list.html
+++ b/bbsittingsharing/templates/bbsittingsharing/bbsitting_list.html
@@ -21,5 +21,9 @@
     <div id="calendar-right" class="col-sm-6"></div>
     <div class="btn calendar-arrow right glyphicon glyphicon-menu-right" onclick="stepCalendar(+1)"></div>
     <div class="clearfix"></div>
+    <img src="{% static 'goutterouge.png' %}" alt="{% trans 'Red drop' %}">
+    {% trans "My dates" %}
+    <img src="{% static 'gouttebleue.png' %}" alt="{% trans 'Blue drop' %}">
+    {% trans "My group's dates" %}
 </div>
 {% endblock %}
