feature: user gender ui: checkboxes are yes/No choices bugfix: don't add empty equipments

--- a/bbsittingsharing/static/css/bbsittingsharing.css
+++ b/bbsittingsharing/static/css/bbsittingsharing.css
@@ -118,6 +118,15 @@ footer a {
     color: white;
 }
 
+.btn-checkbox {
+    background: white;
+    font-weight: lighter;
+}
+.btn-checkbox.active {
+    background: #183c77;
+    color: white;
+    font-weight: bold;
+}
 .panel {
     padding: 2em;
     background: white;
