--- a/bbsittingsharing/templates/bootstrapform/field.html
+++ b/bbsittingsharing/templates/bootstrapform/field.html
@@ -23,14 +23,12 @@
         {% if field.auto_id %}
             <label class="control-label {{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}">{{ field.label }}</label>
         {% endif %}
-        <div class="{{ classes.value }}">
+        <div class="{{ classes.value }} btn-group" data-toggle="buttons">
             {% for choice in field %}
-                <div class="radio">
-                    <label>
+                    <label class="btn btn-checkbox">
                         {{ choice.tag }}
                         {{ choice.choice_label }}
                     </label>
-                </div>
             {% endfor %}
 
             {% for error in field.errors %}
