update: email graphic

--- a/bbsittingsharing/templates/notification/account_validated.html
+++ b/bbsittingsharing/templates/notification/account_validated.html
@@ -1,3 +1,5 @@
+{% extends 'notification/base.html'%}
 {% load i18n %}
-<p>{% trans "Hello" %}.</p>
+{% block content %}
 <p>{% trans "Your account has been validated on BBSitting Sharing. You can now log in and share bbsittings!" %}</p>
+{% endblock %}
