--- a/bbsittingsharing/templates/notification/book_validated.html
+++ b/bbsittingsharing/templates/notification/book_validated.html
@@ -1,4 +1,5 @@
+{% extends 'notification/base.html'%}
 {% load i18n %}
-<p>{% trans "Hello" %}.</p>
-
+{% block content %}
 <p>{{booking.bbsitting.author.get_full_name}} {% trans "has validated your booking for the bbsitting on" %} {{booking.bbsitting.date}}.</p>
+{% endblock %}
