--- a/bbsittingsharing/templates/bbsittingsharing/bbsitting_form.html
+++ b/bbsittingsharing/templates/bbsittingsharing/bbsitting_form.html
@@ -9,6 +9,7 @@
 <form method="post">
     {% csrf_token %}
     {{form|bootstrap}}
+    <div class="clearfix"></div>
     <input type="submit" class="btn panelbtn">
 </form>
 {% endblock %}
