--- a/bbsittingsharing/templates/base.html
+++ b/bbsittingsharing/templates/base.html
@@ -16,7 +16,7 @@
         <script src='{% static "js/moment-locale/"|add:LANGUAGE_CODE|add:".js" %}'></script>
         <script src='{% static "js/bbsittingsharing.js" %}'></script>
         <script>
-            webshims.polyfill();
+            webshims.polyfill("forms-ext");
             webshim.setOptions("forms-ext", {"date": {"startView": 2,"inlinePicker": true}});
         </script>
         {% block scripts %}{% endblock %}
